refactor: change List<Integer> to Lotto