@@ -12,14 +12,14 @@ import org.junit.jupiter.api.Test;
 class ComparatorTest {
 
     private Comparator comparator;
-    private List<Integer> userLotteryNumbers;
+    private Lotto lotto;
     private List<Integer> winningNumbers;
     private int bonusNumber;
 
     @BeforeEach
     void initialize() {
         comparator = new Comparator();
-        userLotteryNumbers = new ArrayList<>(Arrays.asList(1, 3, 7, 12, 23, 40));
+        lotto = new Lotto(List.of(1, 3, 7, 12, 23, 40));
         winningNumbers = new ArrayList<>(Arrays.asList(10, 11, 13, 16, 23, 26));
         bonusNumber = 7;
     }
@@ -27,7 +27,7 @@ class ComparatorTest {
     @Test
     @DisplayName("로또 번호와 당첨 번호를 비교합니다")
     void getMatchCount() {
-        int matchCount = comparator.getMatchCount(userLotteryNumbers, winningNumbers);
+        int matchCount = comparator.getMatchCount(lotto, winningNumbers);
 
         assertThat(matchCount)
                 .isEqualTo(1);
@@ -36,7 +36,7 @@ class ComparatorTest {
     @Test
     @DisplayName("로또 번호와 보너스 번호를 비교합니다")
     void hasBonusNumber() {
-        boolean hasBonusNumber = comparator.hasBonusNumber(userLotteryNumbers, bonusNumber);
+        boolean hasBonusNumber = comparator.hasBonusNumber(lotto, bonusNumber);
 
         assertThat(hasBonusNumber)
                 .isEqualTo(true);
